# zstarview

./: LICENSE.txt  README.md  README_ja-JP.md  pyproject.toml
src/zstarview/: __about__.py  __init__.py  astro.py  catalog.py  config.py  make_desktop_file.py  paths.py  types.py  zstarview.py
src/zstarview/data/: check_font_emoji.py  convert_bsc_to_csv.py  fetch_tycho2.py  stars.csv
src/zstarview/data/stars/: IAU-Catalog of Star Names (always up to date).csv  add_name.py  convert_to_csv.py
src/zstarview/render/: draw.py  draw_o.py
src/zstarview/ui/: window.py
src/zstarview/utils/: image.py  qt.py
