[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zstarview"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Toshihiro Kamiya", email = "kamiya@mbj.nifty.com" },
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "pygame",
  "astropy",
  "skyfield",
]

[project.urls]
Documentation = "https://github.com/Toshihiro Kamiya/zstarview#readme"
Issues = "https://github.com/Toshihiro Kamiya/zstarview/issues"
Source = "https://github.com/Toshihiro Kamiya/zstarview"

[tool.hatch.version]
path = "src/zstarview/__about__.py"

[tool.hatch.metadata]
package-data = { zstarview = ["data/**/*"] }

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/zstarview tests}"

[tool.coverage.run]
source_pkgs = ["zstarview", "tests"]
branch = true
parallel = true
omit = [
  "src/zstarview/__about__.py",
]

[tool.coverage.paths]
zstarview = ["src/zstarview", "*/zstarview/src/zstarview"]
tests = ["tests", "*/zstarview/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[project.gui-scripts]
zstarview = "zstarview:main"
